Correcciones en index.html

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -147,3 +147,17 @@
 
 	</body>
 </html>
+
+<!--
+	Correcciones:
+	*************
+	
+	Va por muy buen camino el trabajo. Por el momento solamente le prestaría
+	atención a estos puntos:
+	
+	* El campo de búsqueda y su botón deberían estar incluidos en un formulario.
+	* Atención a la separación en secciones, especialmente entre la búsqueda y
+	  los bloques de precios. Harían falta algunas divisiones adicionales.
+	* Haría un uso más fuerte de IDs y clases para poder identificar mejor qué
+	  es cada componente del documento.
+-->
