Más correcciones en index.html

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -160,4 +160,7 @@
 	  los bloques de precios. Harían falta algunas divisiones adicionales.
 	* Haría un uso más fuerte de IDs y clases para poder identificar mejor qué
 	  es cada componente del documento.
+	* No hace falta la imagen grande del header, si queremos ponerle un color de
+	  fondo podemos hacerlo con CSS.
+	* En el tag <img> se especifica el alto y el ancho en pixels sin usar "px".
 -->
